<?xml version="0.0.1"?>
<package format="2">
  <name>ros_monitoring</name>
  <version>0.0.1</version>
  <description>The ros_monitoring package</description>

  <maintainer email="andreluisfranca98@gmail.com">Andre Luis Frana</maintainer>
  
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/CeDRI_IPB/ros_monitoring</url>
  
  <author email="andreluisfranca98@gmail.com">Andre Luis Frana</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
